--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-fontawesome": "^1.7.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
