--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "dayjs": "^1.11.6",
+    "flowbite": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-fontawesome": "^1.7.1"
+    "react-fontawesome": "^1.7.1",
+    "react-icons": "^4.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
@@ -20,7 +22,7 @@
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.3",
+    "tailwindcss": "^3.2.4",
     "vite": "^3.2.3"
   }
 }
