--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
     "dayjs": "^1.11.6",
     "flowbite": "^1.5.4",
     "react": "^18.2.0",
+    "react-day-picker": "^8.3.6",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^4.6.0"
