--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,7 +15,8 @@
     "react-day-picker": "^8.3.6",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
-    "react-icons": "^4.6.0"
+    "react-icons": "^4.6.0",
+    "react-router-dom": "^6.4.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
