--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "dayjs": "^1.11.6",
     "flowbite": "^1.5.4",
     "react": "^18.2.0",
