--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^4.6.0",
+    "react-query": "^3.39.2",
     "react-router-dom": "^6.4.4"
   },
   "devDependencies": {
