--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.10",
     "@types/pg": "^8.6.5",
@@ -18,6 +19,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
