--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,7 +18,8 @@
     "react-fontawesome": "^1.7.1",
     "react-icons": "^4.6.0",
     "react-query": "^3.39.2",
-    "react-router-dom": "^6.4.4"
+    "react-router-dom": "^6.4.4",
+    "react-star-ratings-component": "^1.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
