--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,15 +11,13 @@
   "dependencies": {
     "axios": "^1.2.1",
     "dayjs": "^1.11.6",
-    "flowbite": "^1.5.4",
     "react": "^18.2.0",
     "react-day-picker": "^8.3.6",
     "react-dom": "^18.2.0",
-    "react-fontawesome": "^1.7.1",
     "react-icons": "^4.6.0",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.4",
-    "react-star-ratings-component": "^1.0.1"
+    "react-star-ratings": "^2.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
